--- a/home.html
+++ b/home.html
@@ -69,7 +69,9 @@
             <li>
               <a href="#packages" class="navbar-link" data-nav-link>packages</a>
             </li>
-
+            <li>
+              <a href="hot deals" class="navbar-link" data-nav-link>hot deals</a>
+            </li>
             <li>
               <a href="#footer" class="navbar-link" data-nav-link>contact us</a>
             </li>
