book button modification

--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
     
     <div class="btn-group">
       
-      <button class="btn btn-secondary" href="#packages"> Book now</button>
+      <a class="btn btn-secondary" href="#packages"> Book<a>
 
     </div>
   </div>
