--- a/home.html
+++ b/home.html
@@ -185,7 +185,7 @@
   - #PACKAGE
 -->
 
-<section class="package" id="packages">
+<section class="package" id="daily-tours">
   <div class="container">
 
     <!-- New Section for Daily Egypt Tours -->
@@ -340,7 +340,7 @@
         - #PACKAGE
       -->
        <!-- New Section for Daily Egypt Tours -->
-         <section class="package" id="package">
+         <section class="package" id="packages">
         <div class="container">
 
           <ul class="package-list">
