--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
             </li>
 
             <li>
-              <a href="daily-tours" class="navbar-link" data-nav-link>hot deals</a>
+              <a href="#daily-tours" class="navbar-link" data-nav-link>hot deals</a>
             </li>
 
             <li>
