added admin pages

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     - custom css link
   -->
   <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/css/style.css">
 
   <!-- 
     - google font link
@@ -794,7 +794,7 @@ window.addEventListener("scroll", function () {
 });
 </script>
 
-<script defer src="navbar.js" ></script>
+<script defer src="public/js/navbar.js" ></script>
 </body>
 
 </html>
