tours by type header

--- a/home.html
+++ b/home.html
@@ -402,7 +402,10 @@
             </li>
 
           </ul>
-
+<!-- New Section for Tours BY TYPE-->
+<div class="daily-tours">
+  <h2 class="daily-tours-title">TOURS BY TYPE</h2>
+</div>
          
 
         </div>
