--- a/home.html
+++ b/home.html
@@ -402,7 +402,7 @@
             </li>
 
           </ul>
-<!-- New Section for Tours BY TYPE-->
+<!-- New Section for Tours BYy TYPE-->
 <div class="daily-tours">
   <h2 class="daily-tours-title">TOURS BY TYPE</h2>
 </div>
