hyperlink on photos to go to new pages

--- a/home.html
+++ b/home.html
@@ -303,7 +303,8 @@
               <div class="popular-card container">
 
                 <figure class="card-img">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdv8R0aszWtMMSNHcMAZNZcXsFQsMSiP6AUT7rW4du9g&s" alt="pyramids" ">
+                 <a href="giza.html">  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdv8R0aszWtMMSNHcMAZNZcXsFQsMSiP6AUT7rW4du9g&s" alt="pyramids" ">
+                 </a>
                 </figure>
 
                 <div class="card-content">
@@ -337,8 +338,8 @@
               <div class="popular-card">
 
                 <figure class="card-img">
-                  <img src="https://english.ahram.org.eg/Media/News/2014/3/13/2014-635303409753159476-315.jpg" alt="alex library" >
-                </figure>
+                  <a href="alex.html"> <img src="https://english.ahram.org.eg/Media/News/2014/3/13/2014-635303409753159476-315.jpg" alt="alex library" >
+                  </a></figure>
 
                 <div class="card-content">
 
@@ -371,8 +372,8 @@
               <div class="popular-card">
 
                 <figure class="card-img">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTASwcG7AVNrJGcE9J4Syjb_d0x-uf12ywJx6rDSn6hSg&s" alt="Salah el din citadel" >
-                </figure>
+                  <a href="cairo.html">  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTASwcG7AVNrJGcE9J4Syjb_d0x-uf12ywJx6rDSn6hSg&s" alt="Salah el din citadel" >
+                </a></figure>
 
                 <div class="card-content">
 
