--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
     <article>
 
       <!-- 
-        - #HEROoo
+        - #HERO
       -->
 
 
@@ -797,7 +797,7 @@ window.addEventListener("scroll", function () {
 });
 </script>
 
-<script defer src="public/js/navbar.js" ></script>
+<script defer src="navbar.js" ></script>
 </body>
 
 </html>
