--- a/home.html
+++ b/home.html
@@ -405,6 +405,23 @@
 <!-- New Section for Tours BYy TYPE-->
 <div class="daily-tours">
   <h2 class="daily-tours-title">TOURS BY TYPE</h2>
+  <div class="afret">
+    <ul>
+      <li>
+        <img src="https://th.bing.com/th?id=OIF.9g564zKIz9Mb9t%2bYoEkq0w&w=249&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <p>Best Of Cairo Tour From Sinai</p>
+      </li>
+      <li>
+        <img src="images/download.jpeg" alt="">
+        <p>Best Of Cairo 3 Tour</p>
+      </li>
+      <li>
+        <img src="https://th.bing.com/th/id/OIP.b6qtJyin9FIupoD4yfCmQgHaF7?w=189&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
+      </li>
+    </ul>
+  </div>
+  
 </div>
          
 
