--- a/pages/adminstuff/editPKG.html
+++ b/pages/adminstuff/editPKG.html
@@ -100,7 +100,7 @@
         </button>
       </div>
 
-      <button type="submit" class="btn px-5 py-2 mx-5 my-2 btn-primary">
+      <button type="submit" class="btn px-5 py-2 mx-5 my-2 btn-primary" value="Submit">
         Submit
       </button>
     </form>
