--- a/home.html
+++ b/home.html
@@ -17,6 +17,8 @@
   -->
   <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
   <link rel="stylesheet" href="public/css/style.css">
+  
+  <script defer src="public/js/arrow.js"></script>
 
   <!-- 
     - google font link
@@ -329,7 +331,9 @@ Ready to embark on your Egyptian adventure? Contact Egypt Explore Hub today and 
 <div class="daily-tours">
   <h2 class="daily-tours-title">TOURS BY TYPE</h2>
   <div class="afret">
-    <ul>
+    
+    <button class="arrow left">&lt;</button>
+    <ul class="image-list">
       <li>
         <img src="https://th.bing.com/th?id=OIF.9g564zKIz9Mb9t%2bYoEkq0w&w=249&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
         <p>Best Of Cairo Tour From Sinai</p>
@@ -340,6 +344,34 @@ Ready to embark on your Egyptian adventure? Contact Egypt Explore Hub today and 
       </li>
       <li>
         <img src="https://th.bing.com/th/id/OIP.b6qtJyin9FIupoD4yfCmQgHaF7?w=189&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
+      </li>
+      <li>
+        <img src="" alt="">
+        <p> GUIDE TO EGYPTIAN CULTURE AND CUSTOMS</p>
+      </li>
+      <li>
+        <img src="" alt="">
+        <p> BEST TIME TO VISIT EGYPT</p>
+      </li>
+      <li>
+        <img src="" alt="">
+        <p> WHERE TO STAY IN CAIROT</p>
+      </li>
+      <li>
+        <img src="" alt="">
+        <p> 10 BEST THINGS TO DO IN EGYPT</p>
+      </li>
+      <li>
+        <img src="" alt="">
+        <p> IS EGYPT SAFE TO TRAVEL TO?</p>
+      </li>
+      <li>
+        <img src="" alt="">
+        <p> </p>
+      </li>
+      <li>
+        <img src="" alt="">
         <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
       </li>
       <li>
@@ -363,6 +395,7 @@ Ready to embark on your Egyptian adventure? Contact Egypt Explore Hub today and 
         <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
       </li>
     </ul>
+    <button class="arrow right">&gt;</button>
   </div>
   
 </div>
