--- a/pages/bookingForm.html
+++ b/pages/bookingForm.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>booking form</title>
-<link rel="stylesheet" href="public\css\bookingform.css">
+<link rel="stylesheet" href="..\public\css\bookingform.css">
  </head>
 <body>
 <div class="container">
