--- a/pages/giza.html
+++ b/pages/giza.html
@@ -5,7 +5,7 @@
 <title>Pyramids Trip</title>
 <link rel="stylesheet" href="..\public\css\giza.css">
  </head>
- 
+ <!-- test -->
  <body>
 
     <div class="container">
