--- a/home.html
+++ b/home.html
@@ -411,8 +411,11 @@
     <button class="arrow left">&lt;</button>
     <ul class="image-list">
       <li>
-        <img src="https://th.bing.com/th?id=OIF.9g564zKIz9Mb9t%2bYoEkq0w&w=249&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <a href="pages/best.html">
+        <img src="https://th.bing.com/th/id/OIP.ZdpBDZigrfkkalTxLNbOcgHaEO?w=293&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+      </a>
         <p>Best Of Cairo Tour From Sinai</p>
+        
       </li>
       <li>
         <img src="images/download.jpeg" alt="">
@@ -423,53 +426,31 @@
         <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
       </li>
       <li>
-        <img src="" alt="">
+        <img src="https://th.bing.com/th/id/OIP.MqDQlRok5CYqMZ5Jkn9XNQAAAA?w=145&h=155&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
         <p> GUIDE TO EGYPTIAN CULTURE AND CUSTOMS</p>
       </li>
       <li>
-        <img src="" alt="">
+        <img src="https://th.bing.com/th/id/OIP.d6aNF7WZn41acpGfc4X5XQHaE9?w=276&h=185&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
         <p> BEST TIME TO VISIT EGYPT</p>
       </li>
       <li>
-        <img src="" alt="">
-        <p> WHERE TO STAY IN CAIROT</p>
+        <img src="https://th.bing.com/th/id/OIP.aIIf2gT0Z-OP_GJdqDLvfQHaLG?w=115&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <p> WHERE TO STAY IN CAIRO</p>
       </li>
       <li>
-        <img src="" alt="">
+        <img src="https://th.bing.com/th/id/OIP.OJwypVJywCVCQFpUGoMOPAAAAA?w=158&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
         <p> 10 BEST THINGS TO DO IN EGYPT</p>
       </li>
       <li>
-        <img src="" alt="">
+        <img src="https://th.bing.com/th/id/OIP.LFowPaDTEu-e56p-3v-Q3gHaFj?w=229&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
         <p> IS EGYPT SAFE TO TRAVEL TO?</p>
       </li>
       <li>
-        <img src="" alt="">
-        <p> </p>
+        <img src="https://th.bing.com/th/id/OIP.LTdtASgDqHwil-zWSdrstgHaEd?w=280&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+        <p>BEST VIEW TO LOOK</p>
       </li>
       <li>
-        <img src="" alt="">
-        <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
-      </li>
-      <li>
-        <img src="" alt="">
-        <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
-      </li>
-      <li>
-        <img src="" alt="">
-        <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
-      </li>
-      <li>
-        <img src="" alt="">
-        <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
-      </li>
-      <li>
-        <img src="" alt="">
-        <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
-      </li>
-      <li>
-        <img src="" alt="">
-        <p> THE BEST TRAVEL EXPERIENCES IN <br> EGYPT</p>
-      </li>
+      
     </ul>
     <button class="arrow right">&gt;</button>
   </div>
