--- a/pages/bookingForm.html
+++ b/pages/bookingForm.html
@@ -24,6 +24,11 @@
       <input type="submit" value="Submit">
     </form>
     <div id="error-message" class="error-message"></div>
+    <div class="form-group">
+      <label for="date">Trip Date:</label>
+      <input type="date" id="date" name="date" required min="2024-05-10" max="2024-12-31">
+  </div>
+  
   </div>
 
 
