--- a/signupUpdate.html
+++ b/signupUpdate.html
@@ -1220,7 +1220,7 @@ button:hover {
     </div>
 
  <div class="wrapper">
-    <form action="home.html">
+    <form action="index.html">
         <h2>Sign up</h2>
         <div class="form-group fullname">
           <label for="fullname">Full Name</label>
