--- a/pages/admin.html
+++ b/pages/admin.html
@@ -82,7 +82,7 @@
             </li>
             <li class="nav-item px-3">
               <a
-                href="home.html"
+                href="index.html"
                 class="link-underline link-underline-opacity-0"
               >
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
