fixed video link in indexhtm

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="container">
     <div class="video-wrapper">
       <video class="video-blog" autoplay muted loop>
-        <source src="/public/assets/video/vid.mp4" type="video/mp4">
+        <source src="public/assets/video/vid.mp4" type="video/mp4">
       </video>
     </div>
     <h2 class="h1 hero-title">Journey to explore egypt</h2>
