Update admin.html navbar toggler

--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-md navbar-dark border-bottom 1">
       <div class="container-sm">
         <b
-          class="navbar-toggler border border-0 bg-muted"
+          class="navbar-toggler border border-0 bg-muted pb-2"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#main-nav"
