--- a/admin.html
+++ b/admin.html
@@ -33,7 +33,7 @@
           class="collapse navbar-collapse justify-content-center align-center"
           id="main-nav"
         >
-          <ul class="navbar-nav">
+          <ul class="navbar-nav pt-2">
             <!--            <li class="nav-item px-3">
               <a
                 href="pages/adminstuff/analytics.html"
