--- a/register.html
+++ b/register.html
@@ -243,12 +243,11 @@ button:hover {
 
 
  <section class="hero" id="home">
-  <div class="container">
-    <div class="video-wrapper">
-      <video class="video-blog" autoplay muted loop>
-        <source src="vid.mp4" type="video/mp4">
-      </video>
-    </div>
+  <div class="video-wrapper">
+    <video class="video-blog" autoplay muted loop>
+        <source src="046dd42a4e576ddb146cb2aed847479e.mp4" type="video/mp4">
+    </video>
+</div>
  
 
 
@@ -272,7 +271,7 @@ button:hover {
       </div>
       <button type="submit">Log In</button>
       <div class="register">
-        <p>Don't have an account? <a href="">Register</a></p>
+        <p>Don't have an account? <a href="signup.html">Register</a></p>
       </div>
     </form>
   </div>
